# strux

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  EXTENSIONS.md  LICENSE  README.md  REUSABLE_AGENTS.MD  SITE.md  extension.c  flake.nix  index.html  package.json  result  versions.json
.claude/: launch.json
.github/scripts/: e2e-noop.sh
.github/workflows/: ci.yml  docs.yml  release.yml  test-docker-build.yml
assets/: 404.html-5PL9mp7x.js  404.html-BtW_g6MD.js  404.html-D4Jj102O.js  app-B4LHn44G.js  app-CBOFuHUC.js  app-nwDDctZf.js  artifacts.html-CKv4CDij.js  artifacts.html-CT0Ycgg0.js  artifacts.html-D56Oms2v.js  backend.html-BM8AOot1.js  backend.html-covs96LG.js  backend.html-sf2qbi_a.js  bootloader.html-DHhxwlCr.js  bootloader.html-DJUCt33U.js  bootloader.html-DucMm1MM.js  bsp-yaml.html-BWgD0MjX.js  bsp-yaml.html-BxrO4-uK.js  bsp-yaml.html-Cd9BZB8G.js  bsp.html-DaGGbMfF.js  bsp.html-avS4ccx6.js  bsp.html-h9XA5p3_.js  build-pipeline.html-BQfV6o-z.js  build-pipeline.html-C_F9raBt.js  build-pipeline.html-_E0fAAOV.js  build-steps.html-Baf8sCZT.js  build-steps.html-Bs3K9jaW.js  build-steps.html-fqVESs97.js  building.html-DHMvlKt4.js  building.html-Icrhs068.js  building.html-llwZ_NZ4.js  caching.html-C9U9sdPN.js  caching.html-DOkvJca_.js  caching.html-nBi_Jc1b.js  cli.html-Bdvkclm0.js  cli.html-V9kBGWRY.js  cli.html-lgdAs45-.js  customizing-the-os.html-CBSEZUKJ.js  customizing-the-os.html-DaNzy2Yi.js  customizing-the-os.html-Dtdu70zr.js  dev-mode.html-Cnid56Ow.js  (+83 more)
bsp/concepts/: dual-rootfs.html  extension-system.html  lifecycle-scripts.html
bsp/guide/: bootloader.html  examples.html  flash-scripts.html  introduction.html  kernel.html  runtime-extensions.html  scripts.html  writing-a-bsp.html
bsp/reference/: bsp-yaml.html  build-steps.html  environment-variables.html  path-resolution.html
cmd/gen-runtime-types/: main.go  main_test.go
cmd/strux/: main.go
concepts/: artifacts.html  bsp.html  build-pipeline.html  caching.html  display-stack.html  overview.html  update-system.html
docs/: STYLE.md  TODO.md  package-lock.json  package.json
docs/docs/: README.md
guide/: backend.html  building.html  customizing-the-os.html  dev-mode.html  flashing.html  frontend.html  getting-started.html  installation.html  introduction.html  project-structure.html  running-qemu.html  updates.html
notes/: DISPLAY.md
old/: strux-old.sh
pkg/runtime/: README.md  api.go  events.go  registry.go  registry_events_test.go  registry_test.go  runtime.go  server.go  server_test.go  types.go
preview/v0.3.0/: 404.html  index.html
preview/v0.4.0/: 404.html  index.html
reference/: cli.html  frontend-api.html  go-runtime.html  strux-yaml.html
src/: index.ts  settings.test.ts  settings.ts  updatecheck.ts  version.ts
src/assets/: screen-viewer.html
src/assets/screen-base/: capture.c  capture.h  input.c  input.h  main.c  meson.build  pipeline.c  pipeline.h
src/assets/screen-base/protocols/: wlr-screencopy-unstable-v1.xml
src/assets/wpe-extension-base/: CMakeLists.txt  extension.c
src/files/: build-base-script.ts  build-kernel-script.ts  build-uboot-script.ts  init-script.ts  network-script.ts  post-rootfs-build-script.ts  strux-dev-watcher-script.ts  strux-script.ts
src/types/: bsp-yaml.ts  bsp.ts  introspection.ts  main-yaml.ts  strux-runtime.ts
src/utils/: bsp-runtime.test.ts  bsp-runtime.ts  colors.ts  hex.ts  log.ts  network.ts  path.ts  run.ts  sanitize.test.ts  sanitize.ts
src/web-ui/: README.md  env.d.ts  eslint.config.ts  index.html  package.json  vite.config.ts
tests/bats/: strux-init.bats  strux-introspect.bats  strux-types.bats  strux-usb.bats  strux.bats
tests/vanilla-project/: .gitignore  go.mod  go.sum  main.go  strux.yaml
v0.3.0/: 404.html  index.html
v0.3.0/assets/: 404.html-B3Q9KTex.js  404.html-BUUEUd_N.js  404.html-C1OJZ2Pk.js  app-BJNURCT2.js  app-CnSTJJsv.js  app-Dz88-2gk.js  artifacts.html-BMZt_utW.js  artifacts.html-BxcQ2mci.js  artifacts.html-DI32EQGx.js  backend.html-CpJh_raI.js  backend.html-DdU68DZg.js  backend.html-H1gjBBwm.js  bootloader.html-BZVlL6ok.js  bootloader.html-T6R5B1Yl.js  bootloader.html-dl6hUu90.js  bsp-yaml.html-D5IIZ06-.js  bsp-yaml.html-D_t4Adv1.js  bsp-yaml.html-Dgl_XHEJ.js  bsp.html-Ciirq3Ca.js  bsp.html-CwC18o-L.js  bsp.html-havpSEY4.js  build-pipeline.html-C3KLsjra.js  build-pipeline.html-D5YLT4UB.js  build-pipeline.html-rKC9kvaj.js  build-steps.html-CLCHtCpT.js  build-steps.html-DRUL_eWV.js  build-steps.html-rKZDZjSZ.js  building.html-0ppBH4Gv.js  building.html-B-t1__QN.js  building.html-BZvelF3u.js  caching.html-BuGA2mjE.js  caching.html-Bv6OHXOb.js  caching.html-XB1PuGU8.js  cli.html-CKueK10I.js  cli.html-CjFHLvzk.js  cli.html-DMDJ6008.js  customizing-the-os.html-7hVx6i4T.js  customizing-the-os.html-BIFOacLB.js  customizing-the-os.html-CDp4KHpp.js  dev-mode.html-BIlY_HyD.js  (+83 more)
v0.3.0/concepts/: artifacts.html  bsp.html  build-pipeline.html  caching.html  display-stack.html  overview.html  update-system.html
v0.3.0/guide/: backend.html  building.html  customizing-the-os.html  (+9 more)
(+400 files in other folders)
